--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,17 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.zhenai.mini</groupId>
+			<artifactId>file-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.zhenai.mini</groupId>
+			<artifactId>mini-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
